.card base HTML

--- a/weather.js/index.html
+++ b/weather.js/index.html
@@ -24,6 +24,17 @@
         <button class="btn">Показать</button>
       </form>
     </header>
+    <main>
+        <div class="card">
+            <h2 class="card__city">London <span>GB</span></h2>
+            <div class="card__weather">
+                <div class="card__value">11°с</div>
+                
+                <img  class="card__img" src="./img/sun/8.png" alt="cloudy">
+            </div>
+            <div class="card__discription">Cloudy</div>
+        </div>
+    </main>
 
     <script src="./main.js"></script>
   </body>
