--- a/weather.js/index.html
+++ b/weather.js/index.html
@@ -28,7 +28,7 @@
         <div class="card">
             <h2 class="card__city">London <span>GB</span></h2>
             <div class="card__weather">
-                <div class="card__value">11°с</div>
+                <div class="card__value">11<sup>°с</sup></div>
                 
                 <img  class="card__img" src="./img/sun/8.png" alt="cloudy">
             </div>
