--- a/weather.js/index.html
+++ b/weather.js/index.html
@@ -25,16 +25,19 @@
       </form>
     </header>
     <main>
-        <div class="card">
-            <h2 class="card__city">London <span>GB</span></h2>
-            <div class="card__weather">
-                <div class="card__value">11<sup>°с</sup></div>
-                
-                <img  class="card__img" src="./img/sun/8.png" alt="cloudy">
-            </div>
-            <div class="card__discription">Cloudy</div>
+      <div class="card">
+        <h2 class="card__city">London <span>GB</span></h2>
+        <div class="card__weather">
+          <div class="card__value">11<sup>°с</sup></div>
+
+          <img class="card__img" src="./img/sun/8.png" alt="cloudy" />
         </div>
+        <div class="card__discription">Cloudy</div>
+      </div>
     </main>
+    <footer class="footer">
+        <a href="#!">Nattyme</a>
+    </footer>
 
     <script src="./main.js"></script>
   </body>
