--- a/weather.js/index.html
+++ b/weather.js/index.html
@@ -36,7 +36,7 @@
       </div>
     </main>
     <footer class="footer">
-        <a href="#!">Nattyme</a>
+        <a href="#!">by Nattyme</a>
     </footer>
 
     <script src="./main.js"></script>
