data display at card

--- a/weather.js/index.html
+++ b/weather.js/index.html
@@ -26,7 +26,7 @@
       </form>
     </header>
     <main>
-      <div class="card">
+      <!-- <div class="card">
         <h2 class="card__city">London <span>GB</span></h2>
         <div class="card__weather">
           <div class="card__value">11<sup>°с</sup></div>
@@ -34,7 +34,7 @@
           <img class="card__img" src="./img/sun/8.png" alt="cloudy" />
         </div>
         <div class="card__discription">Cloudy</div>
-      </div>
+      </div> -->
     </main>
     <footer class="footer">
         <a href="#!">by Nattyme</a>
