--- a/weather.js/index.html
+++ b/weather.js/index.html
@@ -39,7 +39,7 @@
     <footer class="footer">
         <a href="#!">by Nattyme</a>
     </footer>
-
-    <script src="./main.js"></script>
+    <script type="module" src="./conditions.js"></script>
+    <script  type="module" src="./main.js"></script>
   </body>
 </html>
